--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prop-types": "^15.5.10",
     "react-lifecycles-compat": "^3",
     "react-native-drawer-layout-polyfill": "^1.3.2",
-    "react-native-safe-area-view": "0.14.6",
+    "react-native-safe-area-view": "git+https://github.com/snsdigitaldevs/react-native-safe-area-view.git#v0.14.7",
     "react-navigation-deprecated-tab-navigator": "1.2.0",
     "react-navigation-tabs": "0.2.0"
   },
